--- a/templates/index.html
+++ b/templates/index.html
@@ -44,6 +44,9 @@
          }
         </style>
 </head>
+<script type="text/javascript">
+  console.log = ()=>{};
+</script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/2.3.0/socket.io.dev.js"></script>
 <script src="{{ url_for('static',filename='js/predict.js') }}"></script>
 <script type="text/javascript" charset="utf-8">
