--- a/templates/index.html
+++ b/templates/index.html
@@ -92,11 +92,11 @@
 
 <body id="page-top">
         <!-- Navigation-->
-        <nav class="navbar navbar-expand-lg navbar-light fixed-top py-3" id="mainNav">
+        <nav class="navbar navbar-expand-lg navbar-expand-md navbar-light fixed-top py-3" id="mainNav">
             <div class="container">
                 <a class="navbar-brand js-scroll-trigger" href="#page-top">Home</a><button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
                 <div class="collapse navbar-collapse" id="navbarResponsive">
-                    <ul class="navbar-nav ml-auto my-2 my-lg-0">
+                    <ul class="navbar-nav ml-auto my-2 my-lg-0 my-md-0">
                        <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#guide">About</a></li>
                         <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#about">Predictor</a></li>
                        <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#services">Results</a></li>
@@ -110,11 +110,11 @@
         <header class="masthead">
             <div class="container h-100">
                 <div class="row h-100 align-items-center justify-content-center text-center">
-                    <div class="col-lg-10 align-self-end">
+                    <div class="col-lg-10 col-md-10 align-self-end">
                         <h1 class="text-uppercase text-white font-weight-bold">Welcome to COVID-19 Risk Assessment App</h1>
                         <hr class="divider my-4" />
                     </div>
-                    <div class="col-lg-8 align-self-baseline">
+                    <div class="col-lg-8 col-md-8 align-self-baseline">
                         <p class="text-white-75 font-weight-light mb-5">A simple live COVID-19 risk assessment app made as a part of B-Aegis Life Sciences and Research Hackathon</p>
                         <a class="btn btn-primary btn-xl js-scroll-trigger" href="#guide">Let us start!</a>
                     </div>
@@ -125,7 +125,7 @@
         <section class="page-section bg-primary" style = "background-color: white" id="guide">
             <div class="container">
                 <div class="row justify-content-center">
-                    <div class="col-lg-8 text-center">
+                    <div class="col-lg-8 col-md-8 text-center">
                         <h2 class="text-white mt-0">Know the App!</h2>
                         <hr class="divider light my-4" />
                         <p class="text-white-50 mb-4">Make sure there is sufficient lighting and your face is visible</p>
@@ -142,7 +142,7 @@
         <section class="page-section bg-primary" style = "background-color: #f4623a" id="about">
             <div class="container">
                 <div class="row justify-content-center">
-                    <div class="col-lg-8 text-center">
+                    <div class="col-lg-8 col-md-8 text-center">
                         <h2 class="text-white mt-0">May the odds be ever in your favour!</h2>
                         <hr class="divider light my-4" />
                         <p class="text-white-50 mb-4">Click on the start button to record.</p>
@@ -162,7 +162,7 @@
                 <hr class="divider my-4" />
                 <h3 id="prediction" class="text-center mt-0"></h2>
                 <canvas class="visualizer" height="150px" style="display:none"></canvas>
-                <div id="animation" class="col-lg-12 text-center">
+                <div id="animation" class="col-lg-12 col-md-12 text-center">
                 <div id=container1 >
         					  Alert
         					  <div id=flip>
@@ -177,7 +177,7 @@
                 </div>
                 <br>
                 <hr class="divider my-4" />
-                <div id="col-lg-12 text-center" style="text-align:center">
+                <div id="col-lg-12 col-md-12 text-center" style="text-align:center">
 
 
                   <div class="container">
@@ -200,7 +200,7 @@
 
                   </div>
                   <br>
-                  <div class="col-lg-12 text-center">
+                  <div class="col-lg-12 col-md-12 text-center">
                     <a id=stopRecord disabled class="btn btn-light btn-xl js-scroll-trigger mt-0" href="#services">Stop!</a>
                     <br>
                     <br>
@@ -244,7 +244,7 @@
         <div id="portfolio">
             <div class="container-fluid px-0">
                 <div class="row no-gutters">
-                    <div class="col-lg-4 col-sm-6">
+                    <div class="col-lg-4 col-md-4 col-sm-6">
                         <a class="portfolio-box" href="{{ url_for('static',filename='assets/img/portfolio/fullsize/1.jpg') }}"
                             ><img class="img-fluid" src="{{ url_for('static',filename='assets/img/portfolio/thumbnails/1.jpg') }}" alt="" />
                             <div class="portfolio-box-caption">
@@ -253,7 +253,7 @@
                             </div></a
                         >
                     </div>
-                    <div class="col-lg-4 col-sm-6 px-0">
+                    <div class="col-lg-4 cold-md-4 col-sm-6 px-0">
                         <a class="portfolio-box" href="{{ url_for('static',filename='assets/img/portfolio/fullsize/2.jpg') }}"
                             ><img class="img-fluid w-100 p-0 m-0" src="{{ url_for('static',filename='assets/img/portfolio/thumbnails/2.jpg') }}" alt="" />
                             <div class="portfolio-box-caption">
@@ -262,7 +262,7 @@
                             </div></a
                         >
                     </div>
-                    <div class="col-lg-4 col-sm-6 px-0">
+                    <div class="col-lg-4 col-md-4 col-sm-6 px-0">
                         <a class="portfolio-box" href="{{ url_for('static',filename='assets/img/portfolio/fullsize/4.png') }}">
                             <img class="img-fluid" src="{{ url_for('static',filename='assets/img/portfolio/thumbnails/4.png') }}" alt="" />
                             <div class="portfolio-box-caption">
@@ -271,7 +271,7 @@
                             </div></a
                         >
                     </div>
-                    <div class="col-lg-4 col-sm-6">
+                    <div class="col-lg-4 cold-md-4 col-sm-6">
                             <a class="portfolio-box" href="{{ url_for('static',filename='assets/img/portfolio/fullsize/3.png') }}">
                             <img class="img-fluid" src="{{ url_for('static',filename='assets/img/portfolio/thumbnails/3.png') }}" alt="" />
                             <div class="portfolio-box-caption">
@@ -287,7 +287,7 @@
                                 <div class="project-name">Bootstrap 4</div>
                             </div></a>
                     </div>
-                    <div class="col-lg-4 col-sm-6">
+                    <div class="col-lg-4 col-md-4 col-sm-6">
                         <a class="portfolio-box" href="{{ url_for('static',filename='assets/img/portfolio/fullsize/6.jpg') }}"
                             ><img class="img-fluid" src="{{ url_for('static',filename='assets/img/portfolio/thumbnails/6.jpg') }}" alt="" />
                             <div class="portfolio-box-caption p-3">
@@ -303,18 +303,18 @@
         <section class="page-section" id="contact">
             <div class="container">
                 <div class="row justify-content-center">
-                    <div class="col-lg-8 text-center">
+                    <div class="col-lg-8 col-md-8 text-center">
                         <h2 class="mt-0">Let's Get In Touch!</h2>
                         <hr class="divider my-4" />
                         <p class="text-muted mb-5">Ready to start your next project with us? Send us an email and we will get back to you as soon as possible!</p>
                     </div>
                 </div>
                 <div class="row">
-                    <div class="col-lg-4 ml-auto text-center mb-5 mb-lg-0">
+                    <div class="col-lg-4 col-md-4 ml-auto text-center mb-5 mb-lg-0 mb-md-0">
                         <div>B-Aegis Life Sciences and Research</div>
 
                     </div>
-                    <div class="col-lg-4 mr-auto text-center">
+                    <div class="col-lg-4 col-md-4 mr-auto text-center">
                         <i class="fas fa-envelope fa-3x mb-3 text-muted"></i>
                         <!-- Make sure to change the email address in BOTH the anchor text and the link target below!-->
                         <a class="d-block" href="mailto:info@b-aegis.com">info@b-aegis.com</a>
