--- a/templates/index.html
+++ b/templates/index.html
@@ -162,7 +162,7 @@
                 <hr class="divider my-4" />
                 <h3 id="tag" class="text-center mt-0" style="display:none;">Detecting...</h3>
                 <canvas class="visualizer" height="150px" style="display:none"></canvas>
-                <div id="animation" class="col-lg-12 text-center">
+                <!-- <div id="animation" class="col-lg-12 text-center">
                 <div id=container1 >
         					  Alert
         					  <div id=flip>
@@ -174,7 +174,7 @@
         					 </div>
 
         					<link href="{{ url_for('static',filename='css/2.css') }}" rel="stylesheet"/>
-                </div>
+                </div> -->
                 <br>
                 <hr class="divider my-4" />
                 <div id="col-lg-12 text-center" style="text-align:center">
